--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,8 +5,10 @@ $primaryBlack: #282828;
 $secondaryBlack: #444444;
 $text: #363636;
 $gray: #808285;
+$secondaryGray: #f2f2f2;
 $primaryBlue: #4054B2;
 $primaryGreen: #23A455;
 $white: #FFF;
 $primaryYellow: #F0C002;
 $peach: #f68e5f;
+$secondaryPeach: #fefaef;
