--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,1 +1,31 @@
-/*# sourceMappingURL=footer.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+footer {
+  background-color: #f68e5f;
+  height: 10dvh;
+}
+footer .footer-container {
+  display: flex;
+  max-width: 1240px;
+  margin: auto;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+}
+footer .footer-container .footer-icons {
+  margin-top: 5dvh;
+}
+footer .footer-container .footer-icons i {
+  color: #f2f2f2;
+  gap: 3dvh;
+  transition: color 0.8s;
+}
+footer .footer-container .footer-icons i:hover {
+  color: #23A455;
+}
+footer .footer-container .footer-copyright {
+  margin-top: 5dvh;
+}
+footer .footer-container .footer-copyright p {
+  color: #f2f2f2;
+}/*# sourceMappingURL=footer.css.map */
