--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,9 @@
+@import '../styles/footer.scss';
 @import '../styles/header.scss';
 @import '../styles/main.scss';
+@import '../styles/responsivity.scss';
 @import '../styles/variables.scss';
+@import '../styles/whatsapp-button.scss';
 
 * {
     margin: 0;
