--- a/styles/whatsapp-button.css
+++ b/styles/whatsapp-button.css
@@ -16,7 +16,7 @@
 }
 .whatsapp-btn span {
   visibility: hidden;
-  color: #FFF;
+  color: #363636;
   text-align: center;
   font-size: 1rem;
   position: absolute;
