--- a/styles/whatsapp-button.scss
+++ b/styles/whatsapp-button.scss
@@ -17,7 +17,7 @@
 
     span {
         visibility: hidden;
-        color: $white;
+        color: $text;
         text-align: center;
         font-size: 1rem;
         position: absolute;
